--- a/index.html
+++ b/index.html
@@ -7,24 +7,51 @@
 	<title>Startseite</title>
 	<link rel="stylesheet" type="text/css"
 	  href="src/css/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>WEBDESIGN made simple!</title>
+
+	<!-- FAVICONS -->
+	<link rel="apple-touch-icon" sizes="180x180"
+	  href="./src/img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png"
+	  sizes="32x32" href="./src/img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png"
+	  sizes="16x16" href="./src/img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="./src/img/favicons/site.webmanifest">
+	<link rel="mask-icon" href="./src/img/favicons/safari-pinned-tab.svg"
+	  color="#5bbad5">
+	<link rel="shortcut icon" href="./src/img/favicons/favicon.ico">
+	<meta name="msapplication-TileColor"
+	  content="#f0f0f0">
+	<meta name="msapplication-config"
+	  content="./src/img/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- GOOGLE-FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
 	  rel="stylesheet">
+
+	<!-- AUTOREN-STYLESHEET -->
+	<link rel="stylesheet" type="text/css"
+	  href="./src/css/styles.min.css">
+
 </head>
 
 <body>
 
-	<!-- Navigationsleiste -->
+	<!-- NAVIGATIONSLEISTE -->
 
 	<nav id="header-nav">
-		<!-- normale nav-leiste -->
+
+		<!-- DESKTOP-NAVIGATION -->
 
 		<div class="container" id="desktop-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<ul>
 						<li class="active"><a href="index.html">Startseite</a></li>
@@ -37,15 +64,15 @@
 			</div>
 		</div>
 
-		<!-- mobile nav-dropdown -->
+		<!-- MOBILE-NAVIGATION -->
 
 		<div class="container" id="mobile-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<div class="clearfix" id="mobile-nav-dropdown">
 
@@ -70,11 +97,11 @@
 
 	</nav>
 
-	<!-- === Header-banner === -->
+	<!-- HEADER-BANNER -->
 
 	<header id="header-banner"></header>
 
-	<!-- === Newsletter === -->
+	<!-- NEWSLETTER-BEREICH -->
 
 	<section id="newsletter-bereich">
 
@@ -83,8 +110,7 @@
 				<div class="col-4">
 
 					<p id="nb-werbetext"><span class="wichtiger-text">Melde dich jetzt für den Newsletter an und verpasse nichts mehr!</span>						Wir schicken dir nur interessante
-						Informationen.
-					</p>
+						Informationen.</p>
 
 				</div>
 				<div class="col-2 clearfix">
@@ -109,26 +135,22 @@
 
 	</section>
 
-	<!-- === Logo === -->
+	<!-- LOGO -->
 
-	<div class="animiertes-logo">
+	<div id="animiertes-logo">
 		<img src="./src/img/webdesign-logo-klein.png"
-		  alt="Logo webdesign made simple">
+		  alt="Logo WEBDESIGN made simple">
 	</div>
 
-	<!-- === Leistungen_Bereich === -->
-
-
-
+	<!-- LEISTUNGEN-BEREICH -->
 
 	<section id="leistungen-bereich">
 
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
-					<!-- Intro-bereich  -->
 					<header class="intro-container">
-						<h1>Unsere Leistungen</h1>
+						<h1>WEBDESIGNE made simple!</h1>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
@@ -152,8 +174,8 @@
 			</div>
 			<div class="row">
 				<div class="col-3">
-					<article class="leistung-teaser-box">
-						<h2>Leistungen#1</h2>
+					<article class="leistungs-teaser-box">
+						<h2>Leistung #1</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
@@ -173,12 +195,12 @@
 							deserunt mollit anim id
 							est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn"
-						  href="leistungen.html#leistungen1">Ansehen</a>
+						  href="leistungen.html#leistung1">Ansehen</a>
 					</article>
 				</div>
 				<div class="col-3">
-					<article class="leistung-teaser-box">
-						<h2>Leistungen#2</h2>
+					<article class="leistungs-teaser-box">
+						<h2>Leistung #2</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
@@ -198,14 +220,14 @@
 							deserunt mollit anim id
 							est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn"
-						  href="leistungen.html#leistungen2">Ansehen</a>
+						  href="leistungen.html#leistung2">Ansehen</a>
 					</article>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-3">
-					<article class="leistung-teaser-box">
-						<h2>Leistungen#3</h2>
+					<article class="leistungs-teaser-box">
+						<h2>Leistung #3</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
@@ -225,12 +247,12 @@
 							deserunt mollit anim id
 							est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn"
-						  href="leistungen.html#leistungen3">Ansehen</a>
+						  href="leistungen.html#leistung3">Ansehen</a>
 					</article>
 				</div>
 				<div class="col-3">
-					<article class="leistung-teaser-box">
-						<h2>Leistungen#4</h2>
+					<article class="leistungs-teaser-box">
+						<h2>Leistung #4</h2>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
@@ -250,7 +272,7 @@
 							deserunt mollit anim id
 							est laborum.</p>
 						<a class="btn-typ-2 leistung-ansehen-btn"
-						  href="leistungen.html#leistungen4">Ansehen</a>
+						  href="leistungen.html#leistung4">Ansehen</a>
 					</article>
 				</div>
 			</div>
@@ -258,8 +280,10 @@
 
 	</section>
 
-	<!-- === Video Bereich ===  -->
+	<!-- VIDEO-BEREICH -->
+
 	<section id="video-bereich">
+
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
@@ -288,24 +312,24 @@
 			</div>
 			<div class="row">
 				<div class="col-6">
-					<video src="./src/movie/WEBDESIGN-made-simple-Trailer.mp4"
+					<video src="./src/mov/WEBDESIGN made simple - Trailer.mp4"
 					  controls>
-						<p>Das Video kann leider nicht wiedergegeben werden.
-						Du findest es unter:
-						<a href="">Hier klicken</a>
-					</p>
-					</video>
+							<p>
+								Das Video kann leider nicht wiedergegeben werden.
+								Du findest es jedoch auch <a href="https://youtu.be/Ut2goGezYM4">hier</a>.
+							</p>
+						</video>
 				</div>
 			</div>
 		</div>
+
 	</section>
 
-	<!-- === Service bereich ===  -->
+	<!-- SERVICE-BEREICH -->
 
 	<section id="service-bereich">
 
 		<div class="container">
-
 			<div class="row">
 				<div class="col-6">
 					<header class="intro-container">
@@ -331,57 +355,49 @@
 					</header>
 				</div>
 			</div>
-
 			<div class="row">
-
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon" id="guenstig-icon"></div>
+						<div id="guenstig-icon" class="service-icon"></div>
 						<h1>Günstige Angebote</h1>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
 							incididunt ut labore et
 							dolore magna aliqua. Ut
-							enim ad minim veniam.
-						</p>
+							enim ad minim veniam.</p>
 					</article>
 				</div>
-
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon" id="schnell-icon"></div>
+						<div id="schnell-icon" class="service-icon"></div>
 						<h1>Schnelle Lieferung</h1>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
 							incididunt ut labore et
 							dolore magna aliqua. Ut
-							enim ad minim veniam.
-						</p>
+							enim ad minim veniam.</p>
 					</article>
 				</div>
-
 				<div class="col-2">
 					<article class="service-box">
-						<div class="service-icon" id="modern-icon"></div>
+						<div id="modern-icon" class="service-icon"></div>
 						<h1>Modernes Design</h1>
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing
 							elit, sed do eiusmod tempor
 							incididunt ut labore et
 							dolore magna aliqua. Ut
-							enim ad minim veniam.
-						</p>
+							enim ad minim veniam.</p>
 					</article>
-
 				</div>
 			</div>
 		</div>
 
-		<!-- === Über uns bereich ===  -->
-
 	</section>
+
+	<!-- ÜBER-UNS-BEREICH -->
 
 	<section id="über-uns-bereich">
 
@@ -390,112 +406,119 @@
 			<div class="row">
 				<div class="col-6">
 					<header class="intro-container">
-						<h1>Über uns</h1>
+						<h1>Das sind wir</h1>
 					</header>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-6">
 					<article id="über-uns-container">
-						<p>Lorem ipsum dolor sit amet,
-							consectetur adipisicing
-							elit, sed do eiusmod tempor
-							incididunt ut labore et
-							dolore magna aliqua. Ut
-							enim ad minim veniam, quis
-							nostrud exercitation ullamco
-							laboris nisi ut aliquip
-							ex ea commodo consequat.
-							Duis aute irure dolor in
-							reprehenderit in voluptate
-							velit esse cillum dolore
-							eu fugiat nulla pariatur.
-							Excepteur sint occaecat
-							cupidatat non proident,
-							sunt in culpa qui officia
-							deserunt mollit anim id
-							est laborum. Lorem ipsum
-							dolor sit amet, consectetur
-							adipisicing elit, sed do
-							eiusmod tempor incididunt
-							ut labore et dolore magna
-							aliqua. Ut enim ad minim
-							veniam, quis nostrud exercitation
-							ullamco laboris nisi ut
-							aliquip ex ea commodo consequat.
-							Duis aute irure dolor in
-							reprehenderit in voluptate
-							velit esse cillum dolore
-							eu fugiat nulla pariatur.
-							Excepteur sint occaecat
-							cupidatat non proident,
-							sunt in culpa qui officia
-							deserunt mollit anim id
-							est laborum.</p>
-
-						<p>Lorem ipsum dolor sit amet,
-							consectetur adipisicing
-							elit, sed do eiusmod tempor
-							incididunt ut labore et
-							dolore magna aliqua. Ut
-							enim ad minim veniam, quis
-							nostrud exercitation ullamco
-							laboris nisi ut aliquip
-							ex ea commodo consequat.
-							Duis aute irure dolor in
-							reprehenderit in voluptate
-							velit esse cillum dolore
-							eu fugiat nulla pariatur.
-							Excepteur sint occaecat
-							cupidatat non proident,
-							sunt in culpa qui officia
-							deserunt mollit anim id
-							est laborum.Lorem ipsum
-							dolor sit amet, consectetur
-							adipisicing elit, sed do
-							eiusmod tempor incididunt
-							ut labore et dolore magna
-							aliqua. Ut enim ad minim
-							veniam, quis nostrud exercitation
-							ullamco laboris nisi ut
-							aliquip ex ea commodo consequat.
-							Duis aute irure dolor in
-							reprehenderit in voluptate
-							velit esse cillum dolore
-							eu fugiat nulla pariatur.
-							Excepteur sint occaecat
-							cupidatat non proident,
-							sunt in culpa qui officia
-							deserunt mollit anim id
-							est laborum.</p>
-
-						<p>Lorem ipsum dolor sit amet,
-							consectetur adipisicing
-							elit, sed do eiusmod tempor
-							incididunt ut labore et
-							dolore magna aliqua. Ut
-							enim ad minim veniam, quis
-							nostrud exercitation ullamco
-							laboris nisi ut aliquip
-							ex ea commodo consequat.
-							Duis aute irure dolor in
-							reprehenderit in voluptate
-							velit esse cillum dolore
-							eu fugiat nulla pariatur.
-							Excepteur sint occaecat
-							cupidatat non proident,
-							sunt in culpa qui officia
-							deserunt mollit anim id
-							est laborum.</p>
+						<p>
+							Lorem ipsum dolor amet squid brunch
+							church-key ugh ethical scenester.
+							Cardigan air plant fixie
+							hoodie locavore humblebrag
+							poke la croix copper mug
+							kickstarter flannel woke.
+							Deep v kogi four loko tumblr
+							kickstarter chambray vice
+							YOLO echo park mustache
+							semiotics leggings health
+							goth. Deep v synth meditation
+							cronut locavore. Pork belly
+							meditation shoreditch four
+							loko pickled, ramps scenester
+							hoodie pour-over. Hella
+							raclette live-edge asymmetrical
+							enamel pin kombucha yuccie
+							cold-pressed poutine. Umami
+							bespoke blog forage you
+							probably haven't heard of
+							them unicorn cred tousled
+							small batch hot chicken
+							shaman. Franzen viral hammock
+							kogi. Synth chia raclette,
+							palo santo pok pok direct
+							trade hell of man bun portland
+							wolf ugh succulents adaptogen
+							offal cardigan. Tote bag
+							stumptown raclette thundercats
+							waistcoat celiac tacos +1
+							squid banh mi VHS chillwave
+							migas banjo yr.
+						</p>
+						<p>
+							Occupy lumbersexual neutra, offal
+							four dollar toast chambray
+							knausgaard. Before they
+							sold out scenester lomo
+							raw denim, thundercats distillery
+							freegan street art af franzen
+							letterpress. Chartreuse
+							etsy taiyaki photo booth
+							subway tile kinfolk. Wayfarers
+							tumblr iPhone, synth fixie
+							poutine cornhole blue bottle
+							ramps biodiesel cloud bread
+							artisan shoreditch sriracha
+							VHS. Umami bespoke blog
+							forage you probably haven't
+							heard of them unicorn cred
+							tousled small batch hot
+							chicken shaman. Franzen
+							viral hammock kogi. Synth
+							chia raclette, palo santo
+							pok pok direct trade hell
+							of man bun portland wolf
+							ugh succulents adaptogen
+							offal cardigan. Tote bag
+							stumptown raclette thundercats
+							waistcoat celiac tacos +1
+							squid banh mi VHS chillwave
+							migas banjo yr.
+						</p>
+						<p>
+							Occupy lumbersexual neutra, offal
+							four dollar toast chambray
+							knausgaard. Before they
+							sold out scenester lomo
+							raw denim, thundercats distillery
+							freegan street art af franzen
+							letterpress. Chartreuse
+							etsy taiyaki photo booth
+							subway tile kinfolk. Wayfarers
+							tumblr iPhone, synth fixie
+							poutine cornhole blue bottle
+							ramps biodiesel cloud bread
+							artisan shoreditch sriracha
+							VHS.Lorem ipsum dolor amet
+							squid brunch church-key
+							ugh ethical scenester. Cardigan
+							air plant fixie hoodie locavore
+							humblebrag poke la croix
+							copper mug kickstarter flannel
+							woke. Deep v kogi four loko
+							tumblr kickstarter chambray
+							vice YOLO echo park mustache
+							semiotics leggings health
+							goth. Deep v synth meditation
+							cronut locavore. Pork belly
+							meditation shoreditch four
+							loko pickled, ramps scenester
+							hoodie pour-over.
+						</p>
 						<img src="./src/img/webdesign-logo-vertical.png"
-						  alt="Firmen-logo">
+						  alt="Logo von WEBDESIGN made simple">
 					</article>
 				</div>
 			</div>
+
 		</div>
+
 	</section>
 
-	<!-- === Footer === -->
+	<!-- FOOTER-->
 
 	<footer id="footer">
 
