--- a/kontakt.html
+++ b/kontakt.html
@@ -2,29 +2,53 @@
 <html lang="de">
 
 <head>
+
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kontakt</title>
-	<link rel="stylesheet" type="text/css"
-	  href="src/css/styles.css">
+
+	<!-- FAVICONS -->
+	<link rel="apple-touch-icon" sizes="180x180"
+	  href="./src/img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png"
+	  sizes="32x32" href="./src/img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png"
+	  sizes="16x16" href="./src/img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="./src/img/favicons/site.webmanifest">
+	<link rel="mask-icon" href="./src/img/favicons/safari-pinned-tab.svg"
+	  color="#5bbad5">
+	<link rel="shortcut icon" href="./src/img/favicons/favicon.ico">
+	<meta name="msapplication-TileColor"
+	  content="#f0f0f0">
+	<meta name="msapplication-config"
+	  content="./src/img/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- GOOGLE-FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway"
 	  rel="stylesheet">
+
+	<!-- AUTOREN-STYLESHEET -->
+	<link rel="stylesheet" type="text/css"
+	  href="./src/css/styles.min.css">
+
 </head>
 
 <body>
 
-	<!-- Navigationsleiste -->
+	<!-- NAVIGATIONSLEISTE -->
 
 	<nav id="header-nav">
-		<!-- normale nav-leiste -->
+
+		<!-- DESKTOP-NAVIGATION -->
 
 		<div class="container" id="desktop-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<ul>
 						<li><a href="index.html">Startseite</a></li>
@@ -37,15 +61,15 @@
 			</div>
 		</div>
 
-		<!-- mobile nav-dropdown -->
+		<!-- MOBILE-NAVIGATION -->
 
 		<div class="container" id="mobile-nav">
 			<div class="row">
 				<div class="col-6">
 
 					<a href="index.html" class="logo-link">
-						<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
-					</a>
+							<img src="./src/img/webdesign-logo.png" alt="Logo von WEBDESIGN made simple">
+						</a>
 
 					<div class="clearfix" id="mobile-nav-dropdown">
 
@@ -70,18 +94,18 @@
 
 	</nav>
 
-	<!-- === Header-banner === -->
+	<!-- HEADER-BANNER -->
 
 	<header id="header-banner-klein"></header>
 
-	<!-- === Kontakt-bereich ===  -->
+	<!-- KONTAKT-BREICH -->
 
 	<section id="kontakt-bereich">
 
 		<div class="container">
+
 			<div class="row">
 				<div class="col-6">
-					<!-- Intro-bereich  -->
 					<header class="intro-container">
 						<h1>Kontakt</h1>
 						<p>Lorem ipsum dolor sit amet,
@@ -109,52 +133,51 @@
 			  method="post">
 				<div class="row">
 					<div class="col-3">
-						<label for="vorname" class="screenreader">>Vorname:</label>
+						<label for="vorname" class="screenreader">Vorname:</label>
 						<input id="vorname" type="text"
-						  placeholder="Vorname" name="Vorname">
+						  name="vorname" placeholder="Vorname">
 					</div>
 					<div class="col-3">
-						<label for="nachname" class="screenreader">>Nachname:</label>
+						<label for="nachname" class="screenreader">Nachname:</label>
 						<input id="nachname" type="text"
 						  name="nachname" placeholder="Nachname">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-6">
-						<label for="e-mail" class="screenreader">>E-mail:</label>
-						<input id="e-mail" type="text"
-						  name="e-mail" placeholder="E-mail"
-						  pattern="(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|'(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*')@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
+						<label for="email" class="screenreader">E-Mail:</label>
+						<input id="email" type="text" name="email"
+						  placeholder="E-Mail" pattern="(?:[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*|'(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*')@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])"
 						  title="Gib eine gültige E-Mail Adresse ein!">
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-6">
-						<label for="nachricht"></label>
-						<textarea id="nachricht" name="name"
-						  rows="3" placeholder="Nachricht"></textarea>
+						<label for="nachricht" class="screenreader">Nachricht:</label>
+						<textarea id="nachricht" name="nachricht"
+						  placeholder="Nachricht"></textarea>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-6">
 						<button id="absendenButton" class="btn-typ-3"
-						  type="submit" name="submitButton">
-							Senden
-						</button>
+						  type="submit" name="absendenButton">Senden</button>
 					</div>
 				</div>
+			</form>
+
 		</div>
-		</form>
+
 	</section>
 
-	<!-- === Footer === -->
+	<!-- FOOTER-->
 
 	<footer id="footer">
 
 		<div class="container">
 			<div class="row">
 				<div class="col-6">
-					<span>WEBDESIGN-made-simple online Kurs</span>
+					<span>WEBDESIGN made simple by Ruben Winkler (2018)</span>
 					<nav id="footer-nav">
 						<a href="impressum.html">Impressum</a>
 					</nav>
